--- a/templates/window-encounter.hbs
+++ b/templates/window-encounter.hbs
@@ -212,9 +212,9 @@
                     <section class="window-encounter-detection">
                         <h3 class="window-encounter-section-title">{{localize "coffee-pub-bibliosoph.quickEncounterDetection-Label"}}: <span class="window-encounter-label-value" data-encounter-setting-value="quickEncounterDetection" data-tooltip="{{detectionLevelTooltip}}">{{detectionLevelLabel}}</span></h3>
                         <div class="window-encounter-detection-slider-row">
-                            <span class="window-encounter-detection-endpoint">{{localize "coffee-pub-bibliosoph.quickEncounterDetectionSurprised-Label"}} <i class="fa-solid fa-wifi"></i></span>
+                            <span class="window-encounter-detection-endpoint" data-tooltip="{{localize "coffee-pub-bibliosoph.quickEncounterDetectionSurprised-Label"}}"> <i class="fa-solid fa-eye"></i></span>
                             <input type="range" id="{{appId}}-detection" class="window-encounter-setting-slider" min="1" max="5" value="{{detectionValue}}" step="1" aria-label="Detection (1 to 5)" data-encounter-setting="quickEncounterDetection" data-encounter-setting-min="1" data-encounter-setting-max="5" data-encounter-setting-suffix="" style="--slider-fill: {{detectionFill}}%;" />
-                            <span class="window-encounter-detection-endpoint"><i class="fa-solid fa-wifi-weak"></i>{{localize "coffee-pub-bibliosoph.quickEncounterDetectionUndetected-Label"}}</span>
+                            <span class="window-encounter-detection-endpoint"><i class="fa-solid fa-eye-slash" data-tooltip="{{localize "coffee-pub-bibliosoph.quickEncounterDetectionUndetected-Label"}}"></i></span>
                         </div>
                     </section>
                     <section class="window-encounter-deploy">
